CSharpWars/ingress-ingress-csharpwars.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/$2"},"creationTimestamp":"2022-07-13T13:13:13Z","generation":14,"name":"ingress-csharpwars","namespace":"csharpwars","resourceVersion":"326555","uid":"e6449c02-49bc-4915-a779-7f328317598b"},"spec":{"ingressClassName":"nginx","rules":[{"host":"csharpwars.westeurope.cloudapp.azure.com","http":{"paths":[{"backend":{"service":{"name":"csharpwars-orleans-host","port":{ [...]
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  creationTimestamp: "2022-07-13T13:13:13Z"
  generation: 15
  name: ingress-csharpwars
  namespace: csharpwars
  resourceVersion: "326927"
  uid: e6449c02-49bc-4915-a779-7f328317598b
spec:
  ingressClassName: nginx
  rules:
  - host: csharpwars.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: csharpwars-orleans-host
            port:
              number: 80
        path: /(.*)
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 20.126.168.48
